# cs2309

./: README.md
contest/: README.md  week1-3.cpp  week2-1.cpp  week2-2.cpp  week2-3.cpp
fltk/FirstExample/: main.cpp
fltk/FirstExample/FirstExample/: FirstExample.cpp  demo.cpp  run.sh
hw1/: code.cpp
hw2/: code.cpp
hw3/: polynomial.cpp  sieve.cpp
hw4/: function.cpp
hw5/: intepolation.cpp  regression.cpp
hw6/fltk_w12/: README.md  main.cpp  poly.cpp  poly.h  run.sh  superellipse.cpp  superellipse.h
hw7/fltk_w13/: binary_tree.cpp  binary_tree.h  main.cpp  run.sh  star.cpp  star.h
hw8/fltk_w14/: main.cpp  run.sh
hw9/: greedy.cpp  palindrome.cpp  seq.cpp
proj1/: CMakeLists.txt  README.md  main.tex  repo.tex  run.sh
proj1/include/: mywindow.h  picwindow.h  polygon.h  polygon.hpp  windemo.h
proj1/src/: main.cpp  mywindow.cpp  picwindow.cpp  polygon.cpp  windemo.cpp
proj1/src/tests/: testpolygon.cpp
proj2/: CMakeLists.txt  README.md
proj2/include/: poly.h  window.h
proj2/src/: main.cpp  poly.cpp  window.cpp
proj2/statement/: main.tex  repo.tex
proj2/unittest/: poly_test.cpp
quiz/: area.cpp
